# Life-Dashboard

./: .gitignore  .terraform.lock.hcl  Cargo.toml  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  fbink  go.mod  go.sum  install.sh  life-dashboard-init  lifedashboard.service  main.go  main.tf  periodic-display-init  periodic-display.sh  start.sh
.cargo/: config
cmd/main/: handler.go
pkg/: lifedashboard.go  lifedashboard_test.go
pkg/draw/: draw.go
pkg/event/: event.go
pkg/fetchers/: emeraOval.go  googleCalendar.go  nspower.go  schoolclosures.go  sunAndMoon.go  surf.go  surfcaptain.go  surfline.go  tide.go  todo.go  weather.go
pkg/utils/: credentials.go
serverless/: .gitignore  README.md  handler.js  package-lock.json  package.json  plaid-link.html  serverless.yml
serverless/lib/: forecastIO.js  googleCalendar.js  ical.js  magicseaweed.js  mobileFoodMarket.js  parkingBan.js  plaid.js  schoolClosures.js
src/: event.rs  google_calendar.rs  ical_calendar.rs  main.rs
static/: ttf_to_png.py
