[package]
name = "life-dashboard"
version = "0.1.1"
authors = ["David Hamp-Gonsalves <davidhampgonsalves@gmail.com>"]
edition = '2021'

[dependencies]
openssl-probe = "0.1.4"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
imageproc = "0.21.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
rusttype = "0.9.2"
image = "0.23.10"
rand = "0.6.5"
tokio = { version = "1.21.2", features = ["full"] }

[features]
json=[]
